feat: auth foundation, ci pipeline, and real uploads

--- a/packages/config/tsconfig.base.json
+++ b/packages/config/tsconfig.base.json
@@ -11,7 +11,8 @@
       "@ui/*": ["../ui/src/*"],
       "@schemas/*": ["../schemas/src/*"],
       "@trpc/*": ["../trpc/src/*"],
-      "@db/*": ["../db/src/*"]
+      "@db/*": ["../db/src/*"],
+      "@storage/*": ["../storage/src/*"]
     }
   }
 }
