--- a/apps/studio-web/package.json
+++ b/apps/studio-web/package.json
@@ -5,6 +5,7 @@
   "scripts": { "dev": "next dev", "build": "next build", "lint": "eslint .", "typecheck": "tsc -p tsconfig.json" },
   "dependencies": {
     "next": "14.2.15",
+    "next-auth": "5.0.0-beta.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "3.23.8",
@@ -12,6 +13,9 @@
     "@radix-ui/react-dialog": "1.0.6",
     "@radix-ui/react-slot": "1.0.3",
     "@omnisonic/telemetry": "workspace:*",
+    "@omnisonic/storage": "workspace:*",
+    "@auth/prisma-adapter": "1.1.1",
+    "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "tailwind-merge": "2.4.0",
     "ioredis": "5.4.1"
@@ -24,6 +28,7 @@
     "eslint": "9.11.0",
     "@typescript-eslint/parser": "8.7.0",
     "@typescript-eslint/eslint-plugin": "8.7.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "@types/bcryptjs": "2.4.6"
   }
 }
