--- a/infra/docker/docker-compose.dev.yml
+++ b/infra/docker/docker-compose.dev.yml
@@ -16,10 +16,21 @@ services:
       CLICKHOUSE_PASSWORD: omnisonic
     ports:
       - "8123:8123"
-      - "9000:9000"
     volumes:
       - clickhouse-data:/var/lib/clickhouse
       - ../clickhouse/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+  minio:
+    image: minio/minio:RELEASE.2024-09-22T00-33-43Z
+    environment:
+      MINIO_ROOT_USER: omnisonic
+      MINIO_ROOT_PASSWORD: omnisonic123
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
 
 volumes:
   clickhouse-data:
+  minio-data:
