--- a/apps/insight-web/package.json
+++ b/apps/insight-web/package.json
@@ -13,7 +13,12 @@
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@clickhouse/client": "0.4.3",
+    "@clickhouse/client": "1.12.1",
+    "chart.js": "4.4.9",
+    "chartjs-node-canvas": "5.0.6",
+    "date-fns": "3.6.0",
+    "graphql-ws": "5.13.1",
+    "recharts": "2.12.7",
     "zod": "3.23.8"
   },
   "devDependencies": {
