--- a/apps/studio-web/package.json
+++ b/apps/studio-web/package.json
@@ -2,7 +2,13 @@
   "name": "@omnisonic/studio-web",
   "version": "0.1.0",
   "private": true,
-  "scripts": { "dev": "next dev", "build": "next build", "lint": "eslint .", "typecheck": "tsc -p tsconfig.json" },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "lint": "eslint .",
+    "typecheck": "tsc -p tsconfig.json",
+    "test:api": "node --import tsx --test tests/**/*.test.ts"
+  },
   "dependencies": {
     "next": "14.2.15",
     "next-auth": "5.0.0-beta.18",
@@ -10,15 +16,16 @@
     "react-dom": "18.3.1",
     "zod": "3.23.8",
     "clsx": "2.1.1",
-    "@radix-ui/react-dialog": "1.0.6",
-    "@radix-ui/react-slot": "1.0.3",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-slot": "1.2.4",
     "@omnisonic/telemetry": "workspace:*",
     "@omnisonic/storage": "workspace:*",
-    "@auth/prisma-adapter": "1.1.1",
+    "@auth/prisma-adapter": "2.11.1",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "tailwind-merge": "2.4.0",
-    "ioredis": "5.4.1"
+    "ioredis": "5.4.1",
+    "bullmq": "5.63.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
@@ -29,6 +36,8 @@
     "@typescript-eslint/parser": "8.7.0",
     "@typescript-eslint/eslint-plugin": "8.7.0",
     "tailwindcss-animate": "1.0.7",
-    "@types/bcryptjs": "2.4.6"
+    "@types/bcryptjs": "2.4.6",
+    "tsx": "4.19.0",
+    "tsconfig-paths": "4.2.0"
   }
 }
