--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omnisonic",
   "private": true,
-  "packageManager": "pnpm@9",
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
@@ -18,6 +18,7 @@
     "eslint": "9.11.0",
     "@typescript-eslint/parser": "8.7.0",
     "@typescript-eslint/eslint-plugin": "8.7.0",
-    "@playwright/test": "1.47.0"
+    "@playwright/test": "1.47.0",
+    "@types/node": "20.16.5"
   }
 }
