--- a/services/graph-api/package.json
+++ b/services/graph-api/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "node --enable-source-maps dist/index.js",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "test": "node --import tsx --test tests/**/*.test.ts"
   },
   "dependencies": {
+    "@prisma/client": "5.19.1",
     "@omnisonic/db": "workspace:*",
+    "@omnisonic/pubsub": "workspace:*",
     "@omnisonic/royalty-ledger": "workspace:*",
     "@graphql-yoga/node": "3.9.1",
-    "graphql": "16.9.0"
+    "graphql": "16.9.0",
+    "graphql-ws": "5.13.1",
+    "ws": "8.18.0"
   },
   "devDependencies": {
     "tsx": "4.19.0",
