--- a/services/ingest/requirements.txt
+++ b/services/ingest/requirements.txt
@@ -4,5 +4,7 @@ pydantic==2.9.2
 httpx==0.27.2
 feedparser==6.0.11
 duckdb==1.1.0
+redis==5.0.8
+thefuzz[speedup]==0.22.1
 python-multipart==0.0.9
 python-dotenv==1.0.1
